# OrderBook

./: .gitignore  Cargo.toml  README.md  apidoc.json
api/: Cargo.toml
api/src/: chemix_depth.rs  depth.rs  error_code.rs  kline.rs  main.rs  market.rs  order.rs  route.rs  trade.rs
bot/: Cargo.toml
bot/src/: main.rs  util.rs
chain/: Cargo.toml  nohup.out
chain/src/: bsc.rs  chemix.rs  lib.rs
chain/src/chemix/: chemix_main.rs  mod.rs  mod.rs_bak  storage.rs  vault.rs
common/: Cargo.toml
common/src/: env.rs  lib.rs
common/src/queue/: chain_status.rs  mod.rs
common/src/types/: depth.rs  mod.rs  order.rs  thaw.rs  trade.rs
common/src/utils/: algorithm.rs  math.rs  mod.rs  time.rs
contract/: ChemixMain.json  ChemixStorage.json  Vault.json  chemix_trade_abi.json  hardhat.config.js  package-lock.json  package.json
contract/acala_scripts/: approve.js  check_balance.js  chemix_contract_init_acala.js  create_order.js  deploy.js  deploy_chemix_acala.js  hellworld3.js  init.js  issue.js
contract/acala_scripts/utils/: transactionHelper.js
contract/acala_test/: deploy_hello2.js
contract/bot/: README.md  check_balance.js  deploy.js  deploy_chemix.js  deploy_test.js  fauct.js  run.js  run_chemix.js  run_chemix_dev.js  run_test.js
contract/contracts/: ChemixMain.sol  ChemixTrade.sol  Demo_v2.sol  HelloWorld.sol  TokenProxy.sol  Vault.sol
contract/contracts/impl/: ChemixEvents.sol  ChemixStorage.sol
contract/contracts/lib/: AccessControlledBase.sol  StaticAccessControlled.sol
contract/contracts/testing/: BaseToken1.sol  BaseToken2.sol  CEC.sol  QuoteToken1.sol  QuoteToken2.sol  TestToken.sol  TokenA.sol  TokenB.sol  TokenC.sol  USDT.sol  WBTC.sol  WETH.sol
contract/contracts_renjie/impl/: ChemixEvents.sol
contract/contracts_renjie/lib/: AccessControlledBase.sol  StaticAccessControlled.sol  TokenInteract.sol
contract/contracts_renjie/testing/: TestToken.sol  TokenA.sol  TokenB.sol  TokenC.sol
contract/contracts_test/: ChemixTrade.sol  Demo.sol
contract/eth_scripts/: deploy.js  init.js  issue.js
contract/scripts/: demo-upgrade.js  demo-upgradeable-deploy.js  demo_v2_test.js
contract/test/: sample-test.js
doc/: index.html
doc/assets/: main.bundle.js
engine/: Cargo.toml  README.md
engine/src/: book.rs  main.rs  order.rs  queue.rs  rollback.rs  trade.rs
env/: dev.env  local.env  pro.env
launch/: Cargo.toml
launch/src/: main.rs  queue.rs  rollback.rs  thaw.rs  trade.rs
models/: 0001-init.down.sql  0001-init.up.sql  Cargo.toml  README.md  seed.sql
models/src/: api.rs  chain.rs  engine.rs  forked_order.rs  forked_trade.rs  invalied_trade.rs  lib.rs  market.rs  order.rs  snapshot.rs  thaws.rs  tokens.rs  trade.rs
scanner/: Cargo.toml
scanner/src/: main.rs
test1/: Cargo.toml
test1/src/: main.rs
tools/: 0001-init.down.sql  0001-init.up.sql  bot.sh  db_init.sh  dev.env  local.env  pro.env  seed.sql  tbsc.env
utils/: Cargo.toml
utils/src/: algorithm.rs  env.rs  lib.rs  math.rs  time.rs
ws/: Cargo.toml  README.md
ws/src/: handler.rs  main.rs  ws.rs
