[package]
name = "engine"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.htm

[dependencies]
##ethers = { git = "https://github.com/gakonst/ethers-rs", features = ["legacy"] }
ethers = { version = "0.6.2"}
ethers-providers = "0.6.2"

anyhow = "1.0.53"
env_logger = "0.7.1"
log = "0.4.8"
tokio = { version = "1", features = ["full"] }
ethers-contract-abigen = "0.6.0"
serde = { version = "1.0.124", features = ["derive"] }
serde_json = "1.0.64"
rayon = "1.0.0"
rsmq_async = "5.1.2"
rustc-serialize = "0.3.18"
lazy_static = "1.3.0"
chrono = { version = "0.4", features = ["serde"] }
chemix-utils = { path = "../utils" }
ethers-core = "0.6.0"
chemix-models = { path = "../models" }
chemix-chain = { path = "../chain" }




