[package]
name = "scanner"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "3"
serde = { version = "1.0.104", features = ["derive"] }
serde_json = "1.0.48"
actix-cors = "0.3.0"
actix-rt = "1.0.0"
chemix-chain = { path = "../chain" }
chemix-models = { path = "../models" }
common = { path = "../common" }


env_logger = "0.7.1"
log = "0.4.8"
tokio = { version = "1", features = ["full"] }
rand = "0.8.3"
ethers-core = {path = "../../acala-rs/ethers-core"}
anyhow = "1.0.53"

