[package]
name = "test1"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
##ethers = { git = "https://github.com/gakonst/ethers-rs", features = ["legacy"] }
ethers = { version = "0.6.2"}
ethers-providers = "0.6.2"
anyhow = "1.0.53"
env_logger = "0.7.1"
log = "0.4.8"
tokio = { version = "1", features = ["full"] }
