[package]
name = "ws"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.7.0", features = ["full"] }

serde={version="1.0.126",features=["derive"]}
warp = "0.3.1"
serde_json = "1.0"
futures = { version = "0.3", default-features = false }
uuid = { version = "0.4", features = ["serde", "v4"] }
tokio-stream = "0.1.6"
rsmq_async = "5.1.2"
chemix-chain = { path = "../chain" }
common = { path = "../common" }
log = "0.4.8"
env_logger = "0.7.1"

